Refactor: 중복 코드 간결하게 수정
null or isempty 로 받던거 isblank로 수정